AIX build failure by JDK-8289780

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 20
    • Affects Version/s: 20
    • Component/s: hotspot
    • None
    • 20
    • b07
    • ppc
    • aix

      AIX build was failed by following messages:

      * For target hotspot_variant-server_libjvm_objs_BUILD_LIBJVM_link:
      ld: 0711-317 ERROR: Undefined symbol: collector_func_load
      ld: 0711-317 ERROR: Undefined symbol: .collector_func_load
      ld: 0711-344 See the loadmap file /home/jdkbld/git/jdk/build/aix-ppc64-server-release/hotspot/variant-server/libjvm/objs/libjvm.loadmap for more information.

      In my investigation, JDK-8289780 affects this issue on src/hotspot/share/prims/forte.cpp.

            Assignee:
            Ichiroh Takiguchi
            Reporter:
            Ichiroh Takiguchi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: