8290218: AIX build failure by JDK-8289780