src/hotspot/share/prims/forte.cpp
@@ -667,9 +667,12 @@ void AsyncGetCallTrace(ASGCT_CallTrace *trace, jint depth, void* ucontext) {
 // Method to let libcollector know about a dynamically loaded function.
 // Because it is weakly bound, the calls become NOP's when the library
 // isn't present.
-#ifdef __APPLE__
+#if defined(__APPLE__)
 // XXXDARWIN: Link errors occur even when __attribute__((weak_import))
 // is added
+#define collector_func_load(x0,x1,x2,x3,x4,x5,x6) ((void) 0)
+#define collector_func_load_enabled() false
+#elif defined(_AIX)
 #define collector_func_load(x0,x1,x2,x3,x4,x5,x6) ((void) 0)
 #define collector_func_load_enabled() false
 #else
